[tool.poetry]
name = "pd-backend"
version = "0.1.0"
description = "REST API for interacting with the ECS PD SQL database"
authors = ["bennettscience <brian.bennett2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Migrate = "^3.0.0"
marshmallow-sqlalchemy = "^0.25.0"
webargs = "^8.0.0"
Flask-Login = "^0.6.2"
Authlib = "^1.1.0"
pyOpenSSL = "^20.0.1"
requests = "^2.25.1"
Flask-WeasyPrint = "^0.6"
google-api-python-client = "^2.12.0"
jinja-partials = "^0.1.1"
Flask-Caching = "^1.11.1"
Flask-DebugToolbar = "^0.13.1"
PyMySQL = "^1.0.2"
gunicorn = "^20.1.0"
Flask = "^2.2.2"
pytz = "^2022.4"
Flask-Cors = "^3.0.10"
flask-sqlalchemy = "^3.0.2"
nh3 = "^0.2.13"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
python-dotenv = "^0.17.1"
flake8 = "^3.9.2"
isort = "^5.8.0"
autoflake = "^1.4"
sentry-sdk = {extras = ["flask"], version = "^1.3.1"}
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 88
